		Only enable DepthTesting is the view has a depth buffer
. [FIX] Events: onMouseExit/Enter fixed on Mac
. [FIX] LabelBMFont: can be "init" without further arguments
		Glyphs with big yOffset are rendered correctly (issue #1343)
. [FIX] LabelTTF: Better support for custom TTF (Mac)
		Alignments and LineBreak modes values are the both on iOS and Mac. Needed for editors.
. [FIX] NSThread+Block: fixed crash due to block not being copied to the heap
. [FIX] OpenGL: VAO are initialized on the cocos2d thread on machines that don't support shareables VAOs
. [FIX] Scheduler: Logs warnings with better precision (.4f instead of .2f) (issue #1362)
. [FIX] Templates: LICENSE_cocosdension -> LICENSE_CocosDension (issue #1363)
. [FIX] Texture: If defaultAlpha is RGBA8888 and image has no alpha, use RGBA8 instead of RGB565
		PVR textures sets the glTexParams before creating the texture. faster.
		PVR texture logs warning if NPOT + 16-bit textures, or if RGB888 textures are being used on iOS5
		"PNG" textures: converts NPOT + 16 bit textures to POT on iOS5
		More permissive assert on setTexParams() when CLAMP is used on NPOT textures

version 2.0-rc0a 13-Mar-2012
. [FIX] PerformanceTest: Compiles and run
. [FIX] Tests: fixed shaders tests

version 2.0-rc0 12-Mar-2012
. [NEW] v1.1 Forward-ported changes:
		Actions: CCRepeat ends as expected (issue #1288)
		ColorLayer: incorrect size in init method
		Denshion: Background music fades ok (issue #1304)
		MenuItem: removed warning when deleting item
		ParticleSystem: prevent bursts of particles due to too high emitCounter (issue #1201)
		Sprite: fixed possible setColor and opacity
		TileMap: Flipped tiles can be changed during runtime (issue #1264)
		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
		Types: Added convenience function to create a ccColor4F from color components