@@ -55,6 +55,8 @@
     ccTex2F *texCoords_;
 
     BOOL	fastMode_;
+	
+	BOOL	startingPositionInitialized_;
 }
 /** blending function */
 @property (nonatomic, readwrite, assign) ccBlendFunc blendFunc;
